--- a/amsh.conf
+++ b/amsh.conf
@@ -1,2 +1,2 @@
-# DEVICE          MOUNTPOINT          FS_TYPE    TTL (minute)
-/tmp/test_src    /tmp/amsh_mnt       none       1
+# DEVICE          MOUNTPOINT       FS_TYPE   TTL
+/tmp/disk.img     /tmp/amsh_mnt    ext4      1
