setup script mpoints

--- a/amsh.conf
+++ b/amsh.conf
@@ -1,2 +1,4 @@
-# DEVICE          MOUNTPOINT       FS_TYPE   TTL
-/tmp/disk.img     /tmp/amsh_mnt    ext4      1
+# DEVICE            MOUNTPOINT                FS_TYPE   TTL
+/tmp/demo_usb.img   /tmp/amsh_usb             vfat      1
+/tmp/demo_work.img  /tmp/amsh_work            ext4      10
+/tmp/demo_secret.img /tmp/amsh_secret          ext4      2
