--- a/amsh.conf
+++ b/amsh.conf
@@ -2,5 +2,4 @@
 /tmp/demo_usb.img   /tmp/amsh_usb             vfat      1
 /tmp/demo_work.img  /tmp/amsh_work            ext4      10
 /tmp/demo_secret.img /tmp/amsh_secret          ext4      2
-/dev/sdc1           /tmp/amsh_auto_sdc1       exfat     5
-/dev/sdd1           /tmp/amsh_auto_sdd1       exfat     5
+/dev/sdc1           /tmp/amsh_auto_sdc1       vfat      5
